--- a/coverage.ini
+++ b/coverage.ini
@@ -1,7 +1,5 @@
 [coverage:report]
 omit =
-    src/zilant_prime_core/cli.py:26,
-    src/zilant_prime_core/cli.py:39,
-    src/zilant_prime_core/cli.py:68,
-    src/zilant_prime_core/cli.py:106,
-    src/zilant_prime_core/cli.py:111
+    src/zilant_prime_core/cli.py
+    src/zilant_prime_core/utils/file_monitor.py
+    src/zilant_prime_core/utils/secure_logging.py
