--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ test = [
   "pytest>=8.0,<9.0",
   "pytest-cov>=5.0,<6.0",
   "hypothesis>=6.100,<7.0",
+  "watchdog>=3.0,<4.0",
 ]
 
 dev = [
@@ -58,6 +59,7 @@ dev = [
   "pytest>=8.0,<9.0",
   "pytest-cov>=5.0,<6.0",
   "hypothesis>=6.100,<7.0",
+  "watchdog>=3.0,<4.0",
 ]
 
 docs = [
