--- a/.github/workflows/vault-secrets.yml
+++ b/.github/workflows/vault-secrets.yml
@@ -21,12 +21,12 @@ jobs:
         uses: actions/checkout@v3
 
       # ──────── 1) HashiCorp Vault ────────
-      - name: Login to HashiCorp Vault
-        uses: hashicorp/vault-action@v2
-        with:
-          url: ${{ secrets.VAULT_ADDR }}
-          method: token
-          token: ${{ secrets.VAULT_TOKEN }}
+        #- name: Login to HashiCorp Vault
+        #  uses: hashicorp/vault-action@v2
+        #  with:
+        #    url: ${{ secrets.VAULT_ADDR }}
+        #    method: token
+        #    token: ${{ secrets.VAULT_TOKEN }}
 
       - name: Read ZILANT_LOG_KEY from Vault
         id: get-log-key
