--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -229,3 +229,18 @@ jobs:
             dist/*.whl
             dist/*.tar.gz
             dist/*.sig
+
+###############################################################################
+# 4 — Scan SBOM separately
+###############################################################################
+  scan-sbom:
+    runs-on: ubuntu-latest
+    needs: [security-and-sign]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Generate SBOM
+        run: syft . -o cyclonedx-json=sbom.json
+      - name: Scan SBOM with Grype
+        run: grype sbom:sbom.json --fail-on medium
+      - name: Scan SBOM with Trivy
+        run: trivy sbom.json --severity HIGH,CRITICAL
