--- a/coverage.ini
+++ b/coverage.ini
@@ -3,3 +3,4 @@ omit =
     src/zilant_prime_core/cli.py
     src/zilant_prime_core/utils/file_monitor.py
     src/zilant_prime_core/utils/secure_logging.py
+    src/zilant_prime_core/utils/attest.py
