--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -240,9 +240,12 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install Syft / Grype / Trivy
         run: |
+          sudo apt-get update -y
           curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sudo sh -s -- -b /usr/local/bin
           curl -sSfL https://raw.githubusercontent.com/anchore/grype/main/install.sh | sudo sh -s -- -b /usr/local/bin
           curl -sSfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sudo sh -s -- -b /usr/local/bin
+      - name: Verify Syft version
+        run: syft --version
       - name: Generate SBOM
         run: syft . -o cyclonedx-json=sbom.json
       - name: Scan SBOM with Grype
