--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,12 +2,12 @@
 # SPDX-FileCopyrightText: 2025 Zilant Prime Core contributors
 
 [build-system]
-requires = ["setuptools>=69", "wheel", "setuptools-scm[toml]>=7"]
+requires = ["setuptools", "wheel", "cffi"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name            = "zilant-prime-core"
-dynamic         = ["version"]
+version         = "0.1.0"
 description     = "ZILANT Prime™ core: AEAD, Argon2id, Phase-VDF, .zil container & CLI"
 readme          = "README.md"
 requires-python = ">=3.10"
@@ -31,7 +31,7 @@ dependencies = [
 ]
 
 [project.scripts]
-zilant = "zilant_prime_core.cli:main"
+zilant = "zilant_prime_core.cli:cli"
 
 [project.urls]
 Homepage      = "https://github.com/QuantumKeyUYU/zilant-prime-core"
@@ -70,9 +70,18 @@ docs = [
 where = ["src"]
 namespaces = false
 
-[tool.setuptools_scm]
-version_scheme = "post-release"
-local_scheme   = "no-local-version"
+[tool.setuptools.extension]
+crypto_core = {
+    path = "src/zilant_prime_core/utils/crypto_core.c",
+    language = "c",
+    libraries = ["crypto"],
+}
+hardening = {
+    path = "src/zilant_prime_core/utils/hardening.c",
+    language = "c",
+    libraries = ["seccomp"],
+}
+
 
 [tool.black]
 line-length    = 120
