Remove binary ARCH.png

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 # SPDX-FileCopyrightText: 2025 Zilant Prime Core contributors
 
 [build-system]
-requires = ["setuptools>=69", "wheel", "setuptools-scm[toml]>=7"]
+requires = ["setuptools", "wheel", "cffi"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -31,7 +31,7 @@ dependencies = [
 ]
 
 [project.scripts]
-zilant = "zilant_prime_core.cli:main"
+zilant = "zilant_prime_core.cli:cli"
 
 [project.urls]
 Homepage      = "https://github.com/QuantumKeyUYU/zilant-prime-core"
@@ -65,6 +65,10 @@ docs = [
   "furo>=2023.9",
   "sphinx-autodoc-typehints>=1.25,<2.0",
 ]
+
+[tool.setuptools.extension]
+crypto_core = { path = "src/zilant_prime_core/utils/crypto_core.c", language = "c", include_dirs = [], libraries = ["crypto"] }
+hardening = { path = "src/zilant_prime_core/utils/hardening.c", language = "c", libraries = ["seccomp"] }
 
 [tool.setuptools.packages.find]
 where = ["src"]
