--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,9 +70,11 @@ docs = [
 where = ["src"]
 namespaces = false
 
-[tool.setuptools.extension]
-crypto_core = { path = "src/zilant_prime_core/utils/crypto_core.c", language = "c", libraries = ["crypto"] }
-hardening = { path = "src/zilant_prime_core/utils/hardening.c", language = "c", libraries = ["seccomp"] }
+[tool.setuptools]
+ext-modules = [
+  { name = "zilant_prime_core.utils.crypto_core", sources = ["src/zilant_prime_core/utils/crypto_core.c"], language = "c" },
+  { name = "zilant_prime_core.utils.hardening", sources = ["src/zilant_prime_core/utils/hardening.c"], language = "c" }
+]
 
 
 [tool.black]
