Add pytest timeout and CI step limit

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,6 +80,7 @@ jobs:
           pip install -e .[dev]
 
       - name: Run pytest + coverage
+        timeout-minutes: 30
         env:
           PYTHONPATH: ${{ github.workspace }}/src
         run: |
