--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name            = "zilant-prime-core"
-version         = "0.7.0"
+version         = "0.7.1"
 description     = "ZILANT Prime™ core: AEAD, Argon2id, Phase-VDF, .zil container & CLI"
 readme          = "README.md"
 requires-python = ">=3.10"
@@ -42,6 +42,7 @@ Issues        = "https://github.com/QuantumKeyUYU/zilant-prime-core/issues"
 test = [
   "pytest>=8.0,<9.0",
   "pytest-cov>=5.0,<6.0",
+  "pytest-timeout>=2.3,<3.0",
   "hypothesis>=6.100,<7.0",
 ]
 
@@ -57,6 +58,7 @@ dev = [
   "cyclonedx-bom>=3.16,<7.0",
   "pytest>=8.0,<9.0",
   "pytest-cov>=5.0,<6.0",
+  "pytest-timeout>=2.3,<3.0",
   "hypothesis>=6.100,<7.0",
 ]
 
