--- a/pytest.ini
+++ b/pytest.ini
@@ -24,6 +24,9 @@ addopts =
     --cov-report=term-missing
     --cov-report=html:htmlcov
     --cov-report=xml:coverage.xml
+    --timeout=300
+
+timeout_method = signal
 
 # подавлять DeprecationWarning из внешних библиотек
 filterwarnings =
