--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ test = [
   "pytest-cov>=5.0,<6.0",
   "pytest-timeout>=2.3,<3.0",
   "hypothesis>=6.100,<7.0",
+  "filelock>=3.13,<4.0",
 ]
 
 dev = [
@@ -60,6 +61,7 @@ dev = [
   "pytest-cov>=5.0,<6.0",
   "pytest-timeout>=2.3,<3.0",
   "hypothesis>=6.100,<7.0",
+  "filelock>=3.13,<4.0",
 ]
 
 docs = [
