ci: skip htmlcov upload

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,10 +93,10 @@ jobs:
           name: cov-xml-${{ matrix.python-version }}
           path: coverage.xml
 
-      - uses: actions/upload-artifact@v4
-        with:
-          name: htmlcov-${{ matrix.python-version }}
-          path: htmlcov
+      # - uses: actions/upload-artifact@v4
+      #   with:
+      #     name: htmlcov-${{ matrix.python-version }}
+      #     path: htmlcov
 
 ###############################################################################
 # 3 — SECURITY SCANS + BUILD & SIGN
