--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.12'
-      - run: pip install -r requirements-dev.txt
+      - run: pip install .[metrics,notify] -r requirements-dev.txt
       - run: ruff check .
       - run: black --check .
       - run: isort --check-only .
