--- a/.github/workflows/publish-dry-run.yml
+++ b/.github/workflows/publish-dry-run.yml
@@ -16,4 +16,4 @@ jobs:
           pip install build twine
       - name: Run release script
         run: |
-          scripts/release.sh --repository-url https://test.pypi.org/legacy/
+          scripts/release.sh --repository-url https://test.pypi.org/legacy/ --dry-run
