Disable root guard in tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,6 +4,9 @@
 # Минимальная требуемая версия pytest
 minversion = 7.0
 
+env =
+    ZILANT_ALLOW_ROOT=1
+
 # Где искать тесты
 testpaths = tests
 
