--- a/mypy.ini
+++ b/mypy.ini
@@ -4,5 +4,5 @@ strict = True
 allow_untyped_decorators = True
 warn_return_any = False
 ignore_missing_imports = True
-disable_error_code = attr-defined,type-arg,import-untyped,no-untyped-def,no-any-return,union-attr
+disable_error_code = attr-defined,type-arg,no-untyped-def,no-any-return,union-attr
 exclude = /(tests|docs)/
